[package]
name = "gubert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.17.9"
glib = "0.17.9"
gtk = "0.17.1"
anyhow = "1.0.71"
dirs = "5.0.1"
futures = "0.3.28"
lazy_static = "1.4.0"
tokio = "1.29.1"
users = "0.11.0"
llm-chain-llama = "0.12.3"