[package]
name = "gubert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.17.9"
glib = "0.17.9"
gtk = "0.17.1"
dirs = "5.0.1"
futures = "0.3.28"
lazy_static = "1.4.0"
anyhow = "1.0.75"
candle = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", package = "candle-core" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
clap = "4.4.7"
hf-hub = "0.3.2"
image = "*"
tokenizers = "0.13.4"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
