[package]
name = "gubert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.17.9"
glib = "0.17.9"
gtk = "0.17.1"
dirs = "5.0.1"
futures = "0.3.28"
lazy_static = "1.4.0"
anyhow = "1.0.75"
clap = "4.4.7"
serde = { features = ["derive"], version = "1.0.209" }
reqwest = { features = ["blocking"], version = "0.12.7" }
serde_json = "1.0.127"
